# optimizer-zoo

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: compare.py  train.py
benchmarks/configs/: cifar10_resnet.yaml  cifar10_vit.yaml  mnist_mlp.yaml  wikitext2_gpt2.yaml
models/: __init__.py  gpt2.py  mlp.py  resnet.py  vit.py
optimizers/: __init__.py  adam.py  lion.py  muon.py  psgd.py  schedule_free.py  sgd_momentum.py  soap.py  sophia.py
scripts/: run_all.sh
tests/: test_optimizers.py
toy_demos/: adam.py  lion.py  loss_landscape.py  sgd.py
